# translator

./: .gitignore  pyproject.toml
translator/: lazylog.py  main.py  utils.py
