[tool.poetry]
name = "translator"
version = "0.1.0"
description = ""
authors = ["Shahnoza Bekbulaeva <shahnoza.bekbulaeva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
transformers = {extras = ["torch"], version = "^4.16.2"}
sentencepiece = "^0.1.96"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
